<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home_white"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite"
            android:icon="@drawable/ic_favorite_white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_delete_all"
            android:title="@string/menu_delete_all"
            android:icon="@drawable/ic_delete_white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_white"
            app:showAsAction="always" />
    </group>
</menu>